--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ JWT_SECRET = Sanjeevi
 # CLOUDINARY_API_KEY= ''
 # CLOUDINARY_API_SECRET= ''
 
-API_URI = http://localhost:3000
+API_URI = https://wonderful-sunburst-faf15d.netlify.app
